# pinox

./: .copilot-instructions.md  .dockerignore  .gitignore  ANALYSE_COMPLETE_NOX_PROJET.md  API_USER_GUIDE.md  AUTHENTICATION_GUIDE.md  COMPREHENSIVE_PROGRESS_REPORT.md  COPILOT_PLAN.md  DOCUMENTATION.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  ENHANCED_DEPLOYMENT_GUIDE.md  IMMEDIATE_NEXT_STEPS.md  M7_COMPLETION_SUMMARY.md  M7_FINAL_VERIFICATION.md  M9_TRACKER.md  MIGRATION_GUIDE.md  Makefile  MasterPlan  OPS_QUICK_COMMAND_CARD.md  OPS_RELEASE_DAY_RUNBOOK.md  P3.1_COMPLETION_REPORT.md  P3.1_MULTINODE_SPEC.md  P3.2_COMPLETION_REPORT.md  PHASE2_PHASE3_PROGRESS.md  PHASE3_IMPLEMENTATION_PLAN.md  PROBLEM_RESOLUTION_REPORT.md  PRODUCTION_CREDENTIALS_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_AGENT.md  RELEASE_TEAM_QUICK_REFERENCE.md  SECTIONS_1_2_COMPLETION.md  SECTION_3_COMPLETION.md  SECTION_4_COMPLETION_REPORT.md  STAGING_CHECKLIST_COMPLETION_REPORT.md  STAGING_VALIDATION_RELEASE_CHECKLIST.md  STEP21_COMPLETION_REPORT.md  (+51 more)
.github/: PULL_REQUEST_TEMPLATE.md
agent/: __init__.py  config.yaml  executor.py  instruction_runner.py  planner.py  policies.md  reporter.py
ai/: ai_coordinator.py  biometric_auth.py  policy_engine.py  security_monitor.py
api/: database_manager_multinode.py  main.py  multinode_integration.py  session_manager_distributed.py
auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  utils.py
clients/: nox_client.py  requirements.txt  tests_demo.py
config/: prometheus-dev.yml
(+488 files in other folders)
